--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Add Courses to Shopping Cart</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header id="header" class="header">
