--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="row">
             <div class="four columns">
                 <div class="card">
-                    <img src="img/course1.jpg" class="course-image u-full-width">
+                    <img src="img/img2.jpg" class="course-image u-full-width">
                     <div class="info-card">
                         <h4>HTML5, CSS3, JavaScript for beginners</h4>
                         <p>Kevin Alovega</p>
@@ -93,7 +93,7 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/course2.jpg" class="course-image u-full-width">
+                    <img src="img/img3.jpg" class="course-image u-full-width">
                     <div class="info-card">
                         <h4>Python,Restful APIs for beginners</h4>
                         <p>Kevin Alovega</p>
@@ -105,7 +105,7 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/course3.jpg" class="course-image u-full-width">
+                    <img src="img/img5.jpg" class="course-image u-full-width">
                     <div class="info-card">
                         <h4>Mathematics for Science for beginners</h4>
                         <p>Kevin Alovega</p>
@@ -119,7 +119,7 @@
         <div class="row">
             <div class="four columns">
                 <div class="card">
-                    <img src="img/course4.jpg" class="course-image u-full-width">
+                    <img src="img/img6.jpg" class="course-image u-full-width">
                     <div class="info-card">
                         <h4>Orchard at home</h4>
                         <p>Kevin Alovega</p>
@@ -131,7 +131,7 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/course5.jpg" class="course-image u-full-width">
+                    <img src="img/img7.jpg" class="course-image u-full-width">
                     <div class="info-card">
                         <h4>Home Decor with recycled products</h4>
                         <p>Kevin Alovega</p>
@@ -143,7 +143,7 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/course1.jpg" class="course-image u-full-width">
+                    <img src="img/img3.jpg" class="course-image u-full-width">
                     <div class="info-card">
                         <h4>Web Design for beginners</h4>
                         <p>Kevin Alovega</p>
@@ -157,7 +157,7 @@
         <div class="row">
             <div class="four columns">
                 <div class="card">
-                    <img src="img/course2.jpg" class="course-image u-full-width">
+                    <img src="img/img8.jpg" class="course-image u-full-width">
                     <div class="info-card">
                         <h4>Learn to cook west african food</h4>
                         <p>Kevin Alovega</p>
@@ -169,9 +169,9 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/course2.jpg" class="course-image u-full-width">
+                    <img src="img/img9.jpg" class="course-image u-full-width">
                     <div class="info-card">
-                        <h4>Learn to cook west african food</h4>
+                        <h4>Learn to plant fruits and vegetables</h4>
                         <p>Kevin Alovega</p>
                         <img src="img/stars.png">
                         <p class="price">ksh 5000  <span class="u-pull-right">ksh 3000</span></p>
@@ -181,7 +181,7 @@
             </div>
             <div class="four columns">
                 <div class="card">
-                    <img src="img/course3.jpg" class="course-image u-full-width">
+                    <img src="img/img10.jpg" class="course-image u-full-width">
                     <div class="info-card">
                         <h4>Build a Music studio</h4>
                         <p>Kevin Alovega</p>
@@ -191,23 +191,11 @@
                     </div>
                 </div><!--.card-->
             </div>
-            <div class="four columns">
-                <div class="card">
-                    <img src="img/course4.jpg" class="course-image u-full-width">
-                    <div class="info-card">
-                        <h4>Harvest your Own fruits and vegetables</h4>
-                        <p>Kevin Alovega</p>
-                        <img src="img/stars.png">
-                        <p class="price">ksh 5000  <span class="u-pull-right">ksh 3000</span></p>
-                        <a href="#" class="u-full-width button-primary button input add-to-cart" data-id="9">Add to Cart</a>
-                    </div>
-                </div><!--.card-->
-            </div>
         </div><!--.row-->
         <div class="row">
-            <div class="four c0lumns">
+            <div class="four columns">
                 <div class="card">
-                    <img src="img/course5.jpg" class="course-image u-full-width">
+                    <img src="img/img11.jpg" class="course-image u-full-width">
                     <div class="info-card">
                         <h4>Cook Home cookies</h4>
                         <p>Kevin Alovega</p>
@@ -217,9 +205,9 @@
                     </div>
                 </div><!--.card-->
             </div>
-            <div class="four c0lumns">
+            <div class="four columns">
                 <div class="card">
-                    <img src="img/course1.jpg" class="course-image u-full-width">
+                    <img src="img/img12.jpg" class="course-image u-full-width">
                     <div class="info-card">
                         <h4>Modern Javascript</h4>
                         <p>Kevin Alovega</p>
@@ -229,9 +217,9 @@
                     </div>
                 </div><!--.card-->
             </div>
-            <div class="four c0lumns">
+            <div class="four columns">
                 <div class="card">
-                    <img src="img/course5.jpg" class="course-image u-full-width">
+                    <img src="img/img13.jpg" class="course-image u-full-width">
                     <div class="info-card">
                         <h4>100 Natural recipes</h4>
                         <p>Kevin Alovega</p>
