adds the ability to view and items to the shopping cart

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                                     </thead>
                                     <tbody></tbody>
                                 </table>
-                                <a href="#" id="clear-cart" class="button u- full-
-                                width">Clear Cart</a>
+                                <a href="#" id="clear-cart" class="button u-full-width">Clear Cart</a>
                             </div>
                         </li>
                     </ul>
@@ -253,5 +252,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/app.js"></script>
 </body>
 </html>
