--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Add Courses to Shopping Cart</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header id="header" class="header">
         <div class="container">
             <div class="row">
                 <div class="four columns">
-                    <img src="img/logo.jpg" id="logo">
+                    <img src="../img/logo.jpg" id="logo">
                 </div>
                 <div class="two columns u-pull-right">
                     <ul>
                         <li class="submenu">
-                            <img src="img/cart.png" id="img-cart">
+                            <img src="../img/cart.png" id="img-cart">
                             <div id="shopping-cart">
                                 <table id="cart-content" class="u-full-width">
                                     <thead>
@@ -252,6 +252,6 @@
             </div>
         </div>
     </footer>
-    <script src="js/app.js"></script>
+    <script src="../js/app.js"></script>
 </body>
 </html>
